Fix images error